bumped version small style fixes

--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -2,7 +2,7 @@
 @padding: 10px;
 @tintColor: #eb8833;
 @greyColor: #b9b9b9;
-@bgColor: #f6f6f6;
+@bgColor: #f9f9f9;
 @bgColorTransparent: fadeout(#f9f9f9, 5%);
 @fontSizeLarge: 20px;
 @fontSizeMedium: 18px;
@@ -93,7 +93,7 @@ button.icon {
         color: @tintColor;
         font-family: 'Helvetica Neue', Helvetica, Arial, Verdana;
         font-size: 20px;
-        font-weight: 100;
+        font-weight: 200;
         .box-sizing(border-box);
     }
     input:focus {
@@ -107,7 +107,6 @@ button.icon {
     }
     input.btcAddress {
         font-family: @monospacefont;
-        font-weight: 100;
     }
     input.sendAmount,
     input.passwordConfirm,
