--- a/styles/less/sections.less
+++ b/styles/less/sections.less
@@ -104,7 +104,7 @@
     left: 0;
     right: 0;
     padding: @padding / 2  @padding * 2;
-    background-color: @bgColorTransparent;
+    background-color: @bgColor;
 }
 
 #settingsConfirm {
@@ -300,6 +300,7 @@
                 white-space: nowrap;
                 width: 100px;
                 color: #444;
+                font-size: 12px;
                 font-family: @monospacefont;
 
                 .transition(width 300ms);
